--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <a class="name" target="_blank" href="https://www.arch.kit.edu/3117.php"
                     style="font-size:larger">Inge Hinterwaldner
                 </a>
-                <h5 class="organization">Karlsruhe Institute of Technology</h5>
+                <h5 class="organization">Professor of Art History at Karlsruhe Institute of Technology</h5>
                 <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo provident quisquam a
                     deleniti laborum
                     omnis dicta aliquam repellat deserunt accusantium. Esse velit atque deleniti. Earum
