--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                     </tr>
                     <tr>
                         <td scope="row">11:30 AM – 12:00 AM</td>
-                        <td></td>
-                        <td></td>
+                        <td>Digital metadata of tangible and intangible heritage. </td>
+                        <td>Victor de Boer</td>
                     </tr>
                     <tr class="cent">
                         <td scope="row" colspan="3">Lunch (12:30-14:00)</td>
