Update Marc Schütze speaker section with Exhibition VM Controller talk
- Link speaker name to the exhibition-vm-controller GitHub repo
- Link organization to zkm.de
- Expand organization name to "ZKM | Center for Art and Media Karlsruhe"
- Add talk description about the Exhibition VM Controller project
- Update agenda title to match the talk topic

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     </tr>
                     <tr>
                         <td scope="row">11:00 AM – 11:30 AM</td>
-                        <td>Conservation  and Preservation</td>
+                        <td>Exhibition VM Controller: Preserving Digital Artworks with Virtual Machines</td>
                         <td>Marc Schütze </td>
                     </tr>
                     <tr>
@@ -240,19 +240,11 @@
             </div>
             <div class="col-sm-6 col-8 align-self-center">
 
-                <a class="name" target="_blank" href=""
-                    style="font-size:larger">Marc Schütze 
+                <a class="name" target="_blank" href="https://github.com/zkmkarlsruhe/exhibition-vm-controller"
+                    style="font-size:larger">Marc Schütze
                 </a>
-                <h5 class="organization">ZKM</h5>
-                <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo provident quisquam a
-                    deleniti laborum
-                    omnis dicta aliquam repellat deserunt accusantium. Esse velit atque deleniti. Earum
-                    maxime
-                    necessitatibus veritatis vitae libero eveniet, accusantium culpa voluptas ipsam nisi non
-                    id neque
-                    atque minus qui, natus ducimus dolores est, dolor beatae? Quis esse eius facilis minima
-                    aut cum vero
-                    ex dolore obcaecati sint?</p> -->
+                <h5 class="organization"><a href="https://zkm.de" target="_blank">ZKM | Center for Art and Media Karlsruhe</a></h5>
+                <p>Marc Schütze will present the <a href="https://github.com/zkmkarlsruhe/exhibition-vm-controller" target="_blank">Exhibition VM Controller</a>, an open-source framework for preserving and displaying historical digital artworks that depend on obsolete technology. The system uses virtual machines with automated snapshot-based recovery to keep legacy software running reliably without human intervention in museum and gallery settings.</p>
             </div>
         </div>
         <!-- 4th speaker -->
