Add speaker bio for Marc Schütze
Add biographical paragraph with background, education, and notable
exhibitions alongside the existing talk description.

--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
                     style="font-size:larger">Marc Schütze
                 </a>
                 <h5 class="organization"><a href="https://zkm.de" target="_blank">ZKM | Center for Art and Media Karlsruhe</a></h5>
-                <p>Marc Schütze will present the <a href="https://github.com/zkmkarlsruhe/exhibition-vm-controller" target="_blank">Exhibition VM Controller</a>, an open-source framework for preserving and displaying historical digital artworks that depend on obsolete technology. The system uses virtual machines with automated snapshot-based recovery to keep legacy software running reliably without human intervention in museum and gallery settings.</p>
+                <p>Marc Schütze is a museum and exhibition technology specialist at <a href="https://zkm.de" target="_blank">ZKM | Center for Art and Media Karlsruhe</a> since 2015. With a degree in Media Technology from Hochschule Offenburg, he focuses on making digital art work reliably in exhibitions — from resurrecting 1990s browser-based artworks to managing infrastructure for international touring exhibitions across 20+ countries. His technical contributions span major ZKM exhibitions including Games and Politics, Open Codes, BioMedia, and Renaissance 3.0.</p>
+                <p>Marc will present the <a href="https://github.com/zkmkarlsruhe/exhibition-vm-controller" target="_blank">Exhibition VM Controller</a>, an open-source framework for preserving and displaying historical digital artworks that depend on obsolete technology. The system uses virtual machines with automated snapshot-based recovery to keep legacy software running reliably without human intervention in museum and gallery settings.</p>
             </div>
         </div>
         <!-- 4th speaker -->
