Update Inge Hinterwaldner speaker section
- Update affiliation from KIT to Free University of Bozen-Bolzano
- Link name and organization to her Bozen-Bolzano profile
- Add bio with research focus, education, and MIT Press publication

--- a/index.html
+++ b/index.html
@@ -197,19 +197,11 @@
                 <!-- <img class="w-75 rounded-circle" src="./img/philip.jpg" alt="user photo"> -->
             </div>
             <div class="col-sm-6 col-8 align-self-center">
-                <a class="name" target="_blank" href="https://www.arch.kit.edu/3117.php"
+                <a class="name" target="_blank" href="https://www.unibz.it/de/faculties/design-art/academic-staff/person/53246-inge-hinterwaldner"
                     style="font-size:larger">Inge Hinterwaldner
                 </a>
-                <h5 class="organization">Professor of Art History at Karlsruhe Institute of Technology</h5>
-                <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo provident quisquam a
-                    deleniti laborum
-                    omnis dicta aliquam repellat deserunt accusantium. Esse velit atque deleniti. Earum
-                    maxime
-                    necessitatibus veritatis vitae libero eveniet, accusantium culpa voluptas ipsam nisi non
-                    id neque
-                    atque minus qui, natus ducimus dolores est, dolor beatae? Quis esse eius facilis minima
-                    aut cum vero
-                    ex dolore obcaecati sint?</p> -->
+                <h5 class="organization">Professor at <a href="https://www.unibz.it/de/faculties/design-art/academic-staff/person/53246-inge-hinterwaldner" target="_blank">Free University of Bozen-Bolzano</a></h5>
+                <p>Inge Hinterwaldner is a professor specializing in modern and contemporary art history with a focus on image theory, interactivity, and the intersections of art, architecture, and digital technology. She received her PhD in Art History from the University of Basel and has held research positions at Duke University and MIT. Her book <em>The Systemic Image: A New Theory of Interactive Real-Time Simulations</em> (MIT Press, 2017) examines how interactive computer simulations reshape our understanding of images.</p>
             </div>
         </div>
         <!-- 2nd speaker -->
